--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="home">
         <div class="home-content">
             <h1>Hi, I'm Olorunmbe Ajala</h1>
-            <h3>Frontend Developer</h3>
+            <h3>Fullstack Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officia iusto quidem, aperiam ad odio quos voluptate ipsa similique magnam debitis quia quisquam fugiat. Minima, rem accusamus.</p>
             <div class="btn-box">
                 <a href="#">Hire Me</a>
